fix dock monaco editor suggestions visibility

--- a/assets/dockspawn.css
+++ b/assets/dockspawn.css
@@ -5,3 +5,8 @@
 .dockspan-tab-handle-text {
   margin-top: 0;
 }
+
+/* dock-container dock-container-fill document-manager splitter-container-vertical */
+.dock-container {
+  z-index: 1;
+}
